tests/baselines/reference/moduleWithValuesAsType.errors.txt
moduleWithValuesAsType.ts(5,8): error TS2709: Cannot use namespace 'A' as a type.


==== moduleWithValuesAsType.ts (1 errors) ====
    module A {
        var b = 1;
    }
    
    var a: A; // no error
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.